# engineering-log-triage

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt
artifacts/evaluation/lora_adapter/qwen_lora_r8_train48_steps72_v1/: test.json  validation.json
artifacts/evaluation/prompt_baseline/qwen2.5-1.5b-instruct-nf4-greedy-v1/: validation.json
artifacts/evaluation/prompt_baseline/qwen2.5-1.5b-instruct-nf4-greedy-v2/: test.json  validation.json
data/manifests/: prompt_baseline_v1_manifest.json  split_manifest.json
data/processed/lora_v1/: dataset_manifest.json  test.jsonl  train.jsonl  validation.jsonl
data/raw/: seed_examples.jsonl
docs/: huggingface-publishing-plan.md  huggingface-space-deployment-note.md  model-card-lora-v1.md  split-policy.md  training-data-expansion.md
huggingface/dataset/: README.md
src/engineering_log_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/log_triage/: api.py  baseline.py  dataset.py  dataset_audit.py  evaluate_lora_adapter.py  export_dataset.py  model_loader.py  output_parsing.py  prompting.py  schema.py  smoke.py  splits.py  train_lora_smoke.py
tests/: test_api.py  test_baseline.py  test_dataset.py  test_dataset_audit.py  test_evaluate_lora_adapter.py  test_export_dataset.py  test_model_loader.py  test_output_parsing.py  test_prompting.py  test_schema.py  test_splits.py  test_train_lora_smoke.py
